welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:3: error: illegal start of simple pattern
	}
        ^